# boilerplate-stm32-libopencm3

./: .gitignore  CMakeLists.txt  README.md  local-cmake-example
cmake/: openocd.cmake  toolchain.cmake
libs/: CMakeLists.txt
libs/opencm3/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
